Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-695

contention on glog disk can block reactor threads

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Public beta
    • 1.2.0
    • perf
    • None

    Description

      After adding a watchdog which shows the stack trace of blocked reactor callbacks, I see that in many cases it's actually due to blocking within glog itself. We should see whether we can use an asynchronous sink in glog to avoid this, or else we need to be more careful to move even more work off of reactors.

      Attachments

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment